# campo-minado

./: .gitignore  pyproject.toml  readme.md
src/: board.py  cell.py  game.py  main.py
tests/: test_board.py  test_cell.py  test_game.py
