[tool.poetry]
name = "campo-minado"
version = "0.1.0"
description = "Jogo Campo Minado em Python"
authors = ["Seu Nome <matheus.reno@gec.inatel.br>"]
packages = [
    { include = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
